feat: add java basic api functions